--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ summary/Selector.md
 
 unix network programming/
 
-compile-linker/dynamic_linking.md
+# compile-linker/dynamic_linking.md
 
 compile-linker/pic/*.vsdx
