--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ summary/Selector.md
 
 unix network programming/
 
-# compile-linker/dynamic_linking.md
+compile-linker/linux_shared_library.md
 
 compile-linker/pic/*.vsdx
